@@ -1,3 +1,8 @@
+2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: Fixed bug in DBFCloneEmpty() (treating pachFieldType as
+	an array of int).
+
 2006-02-08  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* dbfopen.c: Changed to put spaces into string fields that are NULL
